fix images overlapping with zoom controls in smaller screens

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_dress-preview.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_dress-preview.scss
@@ -116,8 +116,8 @@
   .dress-preview-thumbnails-item {
     cursor: pointer;
     display: inline-block;
-    margin-bottom: 25px;
-    padding-left: 0;
+    margin-bottom: 5px;
+    padding-left: 7px;
 
     &.selected {
       outline: 1px solid $black;
